--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,9 @@
     <!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>zSoccer - Free Html5 Templates</title>
-	<meta name="description" content="Free Responsive Html5 Css3 Templates | zerotheme.com">
-	<meta name="author" content="www.zerotheme.com">
+	<title>IGS Student club</title>
+	<meta name="description" content="website">
+	<meta name="Manisha" content="manisha">
 	
     <!-- Mobile Specific Metas
   ================================================== -->
@@ -120,7 +120,7 @@
 			<div id="main-content">
 				<div class="wrap-box"><!--Start Box-->
 					<div class="row">
-						<div class="col-2-3">
+						<div class="col-3-3">
 							<div class="wrap-col">
 								<div class="contact">
 									<div class="contact-header">
@@ -153,22 +153,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-1-3">
-							<div class="wrap-col">
-								<div class="contact-header">
-									<h5>Contact Info</h5>
-								</div>
-								<div style="background: #fff; padding: 20px; box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.3);">
-									<span>SED UT PERSPICIATIS UNDE OMNIS ISTE NATUS ERROR SIT VOLUPTATEM ACCUSANTIUM DOLOREMQUE.</span>
-									<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque la udantium, totam rem aperiam, eaque ipsa quae ab illo inventore quasi. Nemo enim ipsam voluptatem quia.</p>
-									<p>JL.Kemacetan timur no.23. block.Q3<br>
-										Jakarta-Indonesia</p>
-									   <p>+6221 888 888 90 <br>
-										+6221 888 88891</p>
-									<p>info@yourdomain.com</p>
-								</div>
-							</div>
-						</div>
+						
 					</div>
 				</div>
 			</div>
