--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>zSoccer - Free Html5 Templates</title>
-	<meta name="description" content="Free Responsive Html5 Css3 Templates | zerotheme.com">
-	<meta name="author" content="www.zerotheme.com">
+	<title>IGS Student club</title>
+	<meta name="description" content="website">
+	<meta name="Manisha" content="manisha">
 	
     <!-- Mobile Specific Metas
   ================================================== -->
