--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/menu.css">
 	<link rel="stylesheet" href="css/responsiveslides.css">
+	
 	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	
 	<script src="js/jquery-latest.min.js"></script
@@ -33,6 +34,12 @@
 	<script src="js/script.js"></script>
     <script src="js/jquery183.min.js"></script>
     <script src="js/responsiveslides.min.js"></script>
+	<script src="js/swfobject.js"></script>
+	<script src="js/jquery.anythingslider.js"></script>
+	<script src="js/jquery.anythingslider.video.js"></script>
+	<script src="js/jquery.anythingslider.min.js"></script>
+	<script src="js/jquery.anythingslider.video.min.js"></script>
+	
     <script>
 		// You can also use "$(window).load(function() {"
 		$(function () {
