--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
 	<script src="js/popp2.js"></script>
 	<script src="js/script.js"></script>
     <script src="js/jquery183.min.js"></script>
-    <script src="js/responsiveslides.min.js"></script>
+    
 	<script src="js/swfobject.js"></script>
 	<script src="js/jquery.anythingslider.js"></script>
 	<script src="js/jquery.anythingslider.video.js"></script>
 	<script src="js/jquery.anythingslider.min.js"></script>
 	<script src="js/jquery.anythingslider.video.min.js"></script>
+	<script src="js/responsiveslides.min.js"></script>
 	
     <script>
 		// You can also use "$(window).load(function() {"
@@ -131,7 +132,8 @@
 					</div>
 				</li>
 				<li>
-					                        <iframe width="100%" height= "504" src="https://www.youtube.com/embed/FGim8X-uYO0" frameborder="0" allowfullscreen=""></iframe>
+					                        <iframe src="https://player.vimeo.com/video/217841404" width="640" height="337" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/217841404">Coke Habit</a> from <a href="https://vimeo.com/dresscode">Dress Code</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 											
 					<div class="caption">
 						<h1>Welcome to Our Website</h1>
