--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
 		<div class="row">
 			<div class="f-right">
 			<div class="item-caption-inner1">
-			<span class="user-social"><i class="fa fa-facebook"></i><i class="fa fa-twitter"></i><i class="fa fa-google-plus"></i><i class="fa fa-pinterest"></i></span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+			<span class="user-social"><a href="https://www.facebook.com/NTUIGSSC/?ref=aymt_homepage_panel"target="_blank"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/NTUsg"target="_blank"><i class="fa fa-twitter"></i><a href="https://www.youtube.com/channel/UCNLyEzruokTI444ALIESEcg"target="_blank"><i class="fa fa-youtube"></i><a href="https://www.flickr.com/photos/91294949@N02/albums/"target="_blank"><i class="fa fa-flickr"></i></span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 			</div>
 			</div>
 			<div class="f-left">
@@ -96,7 +96,7 @@
 				<ul>
 				   <li class='active'><a href="index.html">Home</a></li>
 				   <li><a href="single.html">About</a></li>
-				   <li><a class="page-scroll" href="#container1">Events</a></li>
+				   <li><a class="page-scroll" href="index.html#container1">Events</a></li>
 				   			   
 				   <li><a href="contact.html">Contact US</a></li>
 				</ul>
@@ -171,7 +171,7 @@
 					<ul>
 						<li><a href="#">Home</a></li>
 						<li><a href="#">About</a></li>
-						<li><a href="#">Events</a></li>
+						<li><a class="page-scroll" href="index.html#container1">Events</a></li>
 						<li><a href="#">Contact Us</a></li>
 					</ul>
 				</div>
@@ -183,23 +183,23 @@
 					<div class="row">
 						<div class="col-1-3">
 							<div class="wrap-col">
-								<a href="#"><img src="images/6.jpg" /></a>
-								<a href="#"><img src="images/7.jpg" /></a>
-								<a href="#"><img src="images/8.jpg" /></a>
+								<a href="https://www.flickr.com/photos/91294949@N02/albums/"target="_blank"><img src="images/6.jpg" /></a>
+								<a href="https://www.flickr.com/photos/91294949@N02/albums/"target="_blank"><img src="images/7.jpg" /></a>
+								<a href="https://www.flickr.com/photos/91294949@N02/albums/"target="_blank"><img src="images/8.jpg" /></a>
 							</div>
 						</div>
 						<div class="col-1-3">
 							<div class="wrap-col">
-								<a href="#"><img src="images/9.jpg" /></a>
-								<a href="#"><img src="images/10.jpg" /></a>
-								<a href="#"><img src="images/11.jpg" /></a>
+								<a href="https://www.flickr.com/photos/91294949@N02/albums/"target="_blank"><img src="images/9.jpg" /></a>
+								<a href="https://www.flickr.com/photos/91294949@N02/albums/"target="_blank"><img src="images/10.jpg" /></a>
+								<a href="https://www.flickr.com/photos/91294949@N02/albums/"target="_blank"><img src="images/11.jpg" /></a>
 							</div>
 						</div>
 						<div class="col-1-3">
 							<div class="wrap-col">
-								<a href="#"><img src="images/12.jpg" /></a>
-								<a href="#"><img src="images/13.jpg" /></a>
-								<a href="#"><img src="images/14.jpg" /></a>
+								<a href="https://www.flickr.com/photos/91294949@N02/albums/"target="_blank"><img src="images/12.jpg" /></a>
+								<a href="https://www.flickr.com/photos/91294949@N02/albums/"target="_blank"><img src="images/13.jpg" /></a>
+								<a href="https://www.flickr.com/photos/91294949@N02/albums/"target="_blank"><img src="images/14.jpg" /></a>
 							</div>
 						</div>
 					</div>
