--- a/single.html
+++ b/single.html
@@ -134,7 +134,7 @@
 					<article>
 						<div class="art-header">
 							
-							<img src="images/slideshow-image1.jpg" />
+							<img src="images/img3.jpg" />
 						</div>
 						<div class="art-content">
 							<a href="#"><h3 style="font-size: 37px; line-height: 1.4;">About IGS-SC</h3></a>
