--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 				<ul>
 					<!-- SLIDE  -->
 					<li data-transition="fade" data-slotamount="1" data-masterspeed="1500" data-thumb="" data-delay="130"  data-saveperformance="off"  data-title="Our Workplace">
-						<img src="images/slider/1.jpg"  alt="kenburns1"  data-bgposition="top center" data-kenburns="on" data-duration="30000" data-ease="Linear.easeNone" data-bgfit="100" data-bgfitend="130" data-bgpositionend="top center">
+						<img src="images/slider/1.png"  alt="kenburns1"  data-bgposition="top center" data-kenburns="on" data-duration="30000" data-ease="Linear.easeNone" data-bgfit="100" data-bgfitend="130" data-bgpositionend="top center">
 						<div class="tp-caption customin customout tp-resizeme"
 							data-x="left" data-hoffset="60"
 							data-y="170"
