--- a/index.html
+++ b/index.html
@@ -238,19 +238,9 @@
 			<div class="tp-banner" >
 				<ul>
 					<!-- SLIDE  -->
-					<li data-transition="fade" data-slotamount="1" data-masterspeed="1500" data-thumb="" data-delay="130"  data-saveperformance="off"  data-title="Our Workplace">
-						<img src="images/slider/1.jpg"  alt="kenburns1"  data-bgposition="top center" data-kenburns="on" data-duration="30000" data-ease="Linear.easeNone" data-bgfit="100" data-bgfitend="130" data-bgpositionend="top center">
-						<div class="tp-caption customin customout tp-resizeme"
-							data-x="left" data-hoffset="60"
-							data-y="170"
-							data-customin="x:0;y:0;z:0;rotationX:90;rotationY:0;rotationZ:0;scaleX:1;scaleY:1;skewX:0;skewY:0;opacity:0;transformPerspective:200;transformOrigin:50% 0%;"
-							data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
-							data-speed="1000"
-							data-start="500"
-							data-easing="Back.easeInOut"
-							data-endspeed="300"
-							style="font-size:80px;color:#fff;text-transform:uppercase;font-weight: 800 !important;letter-spacing: 0px;line-height: 120% !important;"
-							>The Focus  <br>
+					<li>
+						<img src="images/slider/1.jpg">
+						<div>The Focus  <br>
 							Is You
 						</div>
 						
