--- a/about.html
+++ b/about.html
@@ -839,7 +839,7 @@ I'm a first year PhD student in IGS-ERI@N, where I try to fight global warming b
 				</div>
 				<div class="col-md-3">
 					<h4 class="space30">Flickr</h4>
-					<a href="https://www.flickr.com/photos/91294949@N02/albums/"target="_blank"> <img src="images/gallery.png" class="img-responsive" width="350" alt=""/></a>
+					<a href="https://www.flickr.com/photos/91294949@N02/albums/"target="_blank"> <img src="images/134.jpg" class="img-responsive" width="350" alt=""/></a>
 				</div>
 			</div>
 		</div>
