--- a/elements-accordion.html
+++ b/elements-accordion.html
@@ -410,7 +410,7 @@ However, at the end of the day, we all help each other out and end up doing inte
 				</div>
 				<div class="col-md-3">
 					<h4 class="space30">Flickr</h4>
-					<a href="https://www.flickr.com/photos/91294949@N02/albums/"target="_blank"> <img src="images/gallery.png" class="img-responsive" width="350" alt=""/></a>
+					<a href="https://www.flickr.com/photos/91294949@N02/albums/"target="_blank"> <img src="images/134.jpg" class="img-responsive" width="350" alt=""/></a>
 				</div>
 			</div>
 		</div>
